best-practices/require_drop_all/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../require_drop_all.yaml
assert:
- policy-assert.yaml
