best-practices/require_drop_all/e2e/03-enforce-policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: drop-all-capabilities
spec:
  validationFailureAction: enforce
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
